Forces stacking context for computed value of transform-style:preserve-3d

This CL reverts the behavior change due to a side effect of r401197.
Prior to r401197, the used value of z-index is adjusted prior to resolving
the used value of transform-style. i.e. adjusted using the computed value.

According to the current spec, overflow other than 'visible' should force
the used value of transform-style:flat even if the computed value was
'preserve-3d'. The spec is unclear about how to resolve z-index in this case.

BUG=663650

Review-Url: https://codereview.chromium.org/2532223003
Cr-Commit-Position: refs/heads/master@{#435439}

Former-commit-id: 413965df09a5ffbcdfa37f82c273af2fdf659654