third_party/WebKit/Source/core/style/ComputedStyleTest.cpp
@@ -68,4 +68,14 @@ TEST(ComputedStyleTest, FocusRingOutset) {
 #endif
 }
 
+TEST(ComputedStyleTest, Preserve3dForceStackingContext) {
+  RefPtr<ComputedStyle> style = ComputedStyle::create();
+  style->setTransformStyle3D(TransformStyle3DPreserve3D);
+  style->setOverflowX(OverflowHidden);
+  style->setOverflowY(OverflowHidden);
+  style->updateIsStackingContext(false, false);
+  EXPECT_EQ(TransformStyle3DFlat, style->usedTransformStyle3D());
+  EXPECT_TRUE(style->isStackingContext());
+}
+
 }  // namespace blink
